# prediction-market-monorepo

./: .gitignore  CLAUDE.md  CLUADE.md  DEPLOY_GUIDE.md  DEVNET部署状态.md  Dockerfile.backend  INTEGRATION_GUIDE.md  PAYMENT_FIX_SUMMARY.md  PLAN.md  README.md  README_CN.md  SOLANA_PAYMENT_TROUBLESHOOTING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  rust-toolchain.toml  test-initialization.ts  tsconfig.json  使用命令行初始化.md  使用说明.md  参数问题已修复.md  合约调试方案.md  快速参考.md  快速解决Config问题.md  支付问题解决方案.md  最终修复-字段顺序.md  最终解决方案-使用Anchor类型.md  最终诊断.md  最终调试步骤.md  权限问题已修复.md  权限问题解决方案.md  测试指南.md  浏览器控制台初始化.md  立即开始测试.md  立即测试-修复版.md  网络问题解决方案.md  获取DEVNET_SOL.md  调试InvalidParameter.md  部署完成总结.md  (+3 more)
ai-prediction-market-front-end/: package.json  pnpm-lock.yaml
cli/: command.ts  (+1 more)
contract/programs/prediction-market/: Cargo.toml
contract/programs/prediction-market/src/: errors.rs  events.rs  insurance.rs  lib.rs  utils.rs
contract/programs/prediction-market/src/instructions/: mod.rs
contract/programs/prediction-market/src/instructions/admin/: configure.rs  configure_market_fees.rs  emergency_unpause.rs  ensure_team_usdc_ata.rs  nominate_authority.rs  pause.rs  pause_market.rs
contract/programs/prediction-market/src/instructions/market/: claim_fees_preview.rs  create_market.rs  mint_complete_set.rs  reclaim_dust.rs  resolution.rs  seed_pool.rs  sell_preview.rs  swap.rs  withdraw_liquidity.rs  withdraw_preview.rs
contract/programs/prediction-market/src/math/: calculator.rs  fixed_point.rs
contract/programs/prediction-market/src/state/: market.rs  whitelist.rs
(+374 files in other folders)
